slight update to fix print button alignment and fix the weird transition errors on first load

--- a/sys/css/styles.css
+++ b/sys/css/styles.css
@@ -14,6 +14,16 @@ html, body {
 	line-height: normal;
 }
 
+
+.css-transitions-only-after-page-load * {
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-ms-transition: none !important;
+	-o-transition: none !important;
+	transition: none !important;
+}
+
+
 .wrapper {
 	padding: 20px;
 }
@@ -66,7 +76,7 @@ img.card-image {
 
 .card {
 	/*width: 160px;*/
-	width: 134px;	
+	width: 134px;
 	height: auto;
 	aspect-ratio: 12.44/7.26;
 	padding: 10px;
@@ -231,10 +241,11 @@ span.footer-link {
 	text-decoration: underline;
 }
 
-.start-sort-activity {}
+.start-sort-activity {
+}
 
 .button {
-		font-size: 20px;
+	font-size: 20px;
 	text-transform: uppercase;
 	white-space: nowrap;
 	width: 149px;
@@ -287,95 +298,96 @@ span.footer-link {
 }
 
 .mode-default .print-sort-activity {
-    width: 0;
-    overflow: hidden;
-    padding: 0;
-    opacity: 0;
+	width: 0;
+	overflow: hidden;
+	padding: 0;
+	opacity: 0;
 }
 
 .mode-sorting .cards {
-    gap: 4px;
-    max-width: 830px;
+	gap: 4px;
+	max-width: 830px;
 }
 
 .mode-sorting .start-sort-activity {
-    width: 0;
-    overflow: hidden;
-    padding: 0;
-    opacity: 0;
-    margin: auto;
+	width: 0;
+	overflow: hidden;
+	padding: 0;
+	opacity: 0;
+	margin: 0;
 }
 
 .sorting-activity {
-    opacity: 0;
-    width: 0;
-    height: 0;
-    transition: all 250ms ease-in-out;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: flex-start;
-    justify-content: space-around;
-    align-items: flex-start;
-    margin-top: 0;
-    overflow: hidden;
+	opacity: 0;
+	width: 0;
+	height: 0;
+	transition: all 250ms ease-in-out;
+	margin: auto;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-content: flex-start;
+	justify-content: space-around;
+	align-items: flex-start;
+	margin-top: 0;
+	overflow: hidden;
 }
 
 .mode-sorting .sorting-activity {
-    width: 100%;
-    height: auto;
-    opacity: 1;
-    margin-top: 40px;
+	width: 100%;
+	height: auto;
+	opacity: 1;
+	margin-top: 40px;
 }
 
 .sorting-column {
-    border-right: 3px solid #999;
-    border-left: 3px solid #999;
-    width: calc(100%/3);
+	border-right: 3px solid #999;
+	border-left: 3px solid #999;
+	width: calc(100% / 3);
 }
 
 .sorting-column-title {
-    padding: 10px;
-    text-align: center;
-    border-bottom: 3px solid #999;
-    font-size: 40px;
+	padding: 10px;
+	text-align: center;
+	border-bottom: 3px solid #999;
+	font-size: 40px;
 }
 
 .sorting-column:first-child,
 .sorting-column:last-child {
-    border: 0;
+	border: 0;
 }
 
 
 .sorting-column-dropzone {
-    min-height: calc(100vh - 611px);
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+	min-height: calc(100vh - 611px);
+	padding: 20px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
 }
 
 .card.draggable-mirror {
-    transition: none;
+	transition: none;
 }
 
-.mode-default .print-sort-activity {}
+.mode-default .print-sort-activity {
+}
 
 span.fa.fa-arrows {
-    font-size: 24px;
-    margin-top: 0;
-    margin-bottom: -20px;
-    padding: 20px 0;
-    width: 100%;
-    text-align: center;
-    display: none;
+	font-size: 24px;
+	margin-top: 0;
+	margin-bottom: -20px;
+	padding: 20px 0;
+	width: 100%;
+	text-align: center;
+	display: none;
 }
 
 .mode-sorting span.fa.fa-arrows {
-    display: block;
+	display: block;
 }
